--- a/ml-pipeline/notebook.ipynb
+++ b/ml-pipeline/notebook.ipynb
@@ -9,7 +9,7 @@
     "from pipeline_builder import DockerMLPipelineBuilder\n",
     "\n",
     "builder = DockerMLPipelineBuilder(\n",
-    "    image=\"python:3.10-slim\",\n",
+    "    image=\"tensorflow/tensorflow:latest\",\n",
     "    source_code_dir=\"src\"\n",
     ")"
    ]
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "builder.add_preprocessing_stage(\n",
-    "    command=\"/bin/bash -c 'pip install -r requirements.txt && python preprocessing/process.py'\",\n",
+    "    command=\"/bin/bash -c 'pip install --no-cache-dir -r requirements.txt && python preprocessing/process.py'\",\n",
     ")"
    ]
   },
@@ -31,8 +31,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "output_path = \"output\"\n",
+    "os.makedirs(output_path, exist_ok=True)\n",
+    "abs_output_path = os.path.abspath(output_path)\n",
+    "\n",
     "builder.add_training_stage(\n",
-    "    command=\"/bin/bash -c 'pip install -r requirements.txt && python training/train.py'\",\n",
+    "    command=\"/bin/bash -c 'pip install --no-cache-dir -r requirements.txt && python training/train.py --input_path /data/training_data.csv --output_path /output'\",\n",
+    "    volumes=[f\"{abs_output_path}:/output\"]\n",
     ")"
    ]
   },
@@ -43,7 +49,8 @@
    "outputs": [],
    "source": [
     "builder.add_serving_stage(\n",
-    "    command=\"/bin/bash -c 'pip install -r requirements.txt && python serving/serve.py'\",\n",
+    "    command=\"/bin/bash -c 'pip install --no-cache-dir -r requirements.txt && python serving/serve.py --model_path /output/cnn_model.h5'\",\n",
+    "    volumes=[f\"{abs_output_path}:/output\"]\n",
     ")"
    ]
   },
