Get pipeline build example working end-to-end

--- a/ml-pipeline/notebook.ipynb
+++ b/ml-pipeline/notebook.ipynb
@@ -9,9 +9,28 @@
     "from pipeline_builder import DockerMLPipelineBuilder\n",
     "\n",
     "builder = DockerMLPipelineBuilder(\n",
-    "    image=\"tensorflow/tensorflow:latest\",\n",
-    "    source_code_dir=\"src\"\n",
+    "    image=\"chand1012/tensorflow:2.5.0\",\n",
+    "    source_code_dir=\"src\",\n",
+    "    requirements_file=\"src/requirements.txt\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup Local Directories for training artifacts\n",
+    "\n",
+    "import os\n",
+    "output_path = \"output\"\n",
+    "os.makedirs(output_path, exist_ok=True)\n",
+    "abs_output_path = os.path.abspath(output_path)\n",
+    "\n",
+    "data_path = \"data\"\n",
+    "os.makedirs(data_path, exist_ok=True)\n",
+    "abs_data_path = os.path.abspath(data_path)"
    ]
   },
   {
@@ -21,7 +40,12 @@
    "outputs": [],
    "source": [
     "builder.add_preprocessing_stage(\n",
-    "    command=\"/bin/bash -c 'pip install --no-cache-dir -r requirements.txt && python preprocessing/process.py'\",\n",
+    "    command=\"python preprocessing/process.py\",\n",
+    "    arguments=[\n",
+    "        \"--output_path\", \"/data\",\n",
+    "        \"--fraction\", \"0.5\"\n",
+    "    ],\n",
+    "    volumes=[f\"{abs_data_path}:/data\"]\n",
     ")"
    ]
   },
@@ -31,14 +55,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "output_path = \"output\"\n",
-    "os.makedirs(output_path, exist_ok=True)\n",
-    "abs_output_path = os.path.abspath(output_path)\n",
-    "\n",
     "builder.add_training_stage(\n",
-    "    command=\"/bin/bash -c 'pip install --no-cache-dir -r requirements.txt && python training/train.py --input_path /data/training_data.csv --output_path /output'\",\n",
-    "    volumes=[f\"{abs_output_path}:/output\"]\n",
+    "    command=\"python training/train.py\",\n",
+    "    arguments=[\n",
+    "        \"--input_path\", \"/data/training_data.npz\", \n",
+    "        \"--output_path\", \"/output\"\n",
+    "    ],\n",
+    "    volumes=[f\"{abs_output_path}:/output\", f\"{abs_data_path}:/data\"],\n",
     ")"
    ]
   },
@@ -49,14 +72,15 @@
    "outputs": [],
    "source": [
     "builder.add_serving_stage(\n",
-    "    command=\"/bin/bash -c 'pip install --no-cache-dir -r requirements.txt && python serving/serve.py --model_path /output/cnn_model.h5'\",\n",
+    "    command=\"python serving/serve.py\",\n",
+    "    arguments=[\"--model_path\", \"/output/cnn_model.h5\"],\n",
     "    volumes=[f\"{abs_output_path}:/output\"]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
